# spec/dummy/public/doc/openapi-3-v1.0.0.json
@@ -606,27 +606,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "query": {
-                    "type": "string",
-                    "description": "The GraphQL query",
-                    "default": "{}"
-                  },
-                  "operationName": {
-                    "type": "string",
-                    "description": "If the Query contains several named operations, the operationName controls which one should be executed",
-                    "default": ""
-                  },
-                  "variables": {
-                    "type": "object",
-                    "description": "Optional Query variables",
-                    "nullable": true
-                  }
-                },
-                "required": [
-                  "query"
-                ]
+                "$ref": "#/components/schemas/GraphQLRequest"
               }
             }
           },
@@ -893,6 +873,29 @@
             }
           }
         }
+      },
+      "GraphQLRequest": {
+        "type": "object",
+        "properties": {
+          "query": {
+            "type": "string",
+            "description": "The GraphQL query",
+            "default": "{}"
+          },
+          "operationName": {
+            "type": "string",
+            "description": "If the Query contains several named operations, the operationName controls which one should be executed",
+            "default": ""
+          },
+          "variables": {
+            "type": "object",
+            "description": "Optional Query variables",
+            "nullable": true
+          }
+        },
+        "required": [
+          "query"
+        ]
       },
       "GraphQLResponse": {
         "type": "object",
